# mas_ai_interview

./: .env.template  README.md  pyproject.toml
src/: agents.py  app.py  main.py  parse_hh.py  settings.py
